data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1158.wast
;; 9. **Test Description**: A `br_table` with operand stack values that determine the index and test how operand stack handling influences indirect branching.    - **Constraint Checked**: Measures implementation's ability to properly manage and utilize the operand stack for indirect branching.    - **Edge Case Relation**: Verifies that index calculation and stack unwinding are correctly managed, especially under edge conditions.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32)
        (block (result i64)
          (br_table 1 0 (i64.const 42) (i32.const 1))
        )
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)